<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activitys.FoodSell">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:ignore="ScrollViewSize">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="60dp">

            <View
                android:id="@+id/act_f_s_top_view"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:background="#047BD5" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

            <ImageView
                android:id="@+id/ivBack"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:padding="15dp"
                android:focusable="true"
                android:foreground="?attr/selectableItemBackground"
                android:src="@drawable/arrow_back" />

            <TextView
                android:id="@+id/act_f_s_textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center"
                android:layout_marginRight="50dp"
                android:elevation="3dp"
                android:fontFamily="@font/roboto_slab"
                android:gravity="center"
                android:text="@string/sell"
                android:textColor="#FFF"
                android:textSize="30sp"
                android:textStyle="bold" />
            </LinearLayout>

        </RelativeLayout>

        <View
            android:id="@+id/act_f_s_view3"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/ic_wave_3" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/act_f_s_foodname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="24dp"
            android:focusable="true"
            tools:ignore="MissingConstraints,NotSibling">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/act_f_s_foodnamename"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/primaryTextColor"
                android:fontFamily="@font/montserrat"
                android:hint="@string/food_name"
                android:inputType="textPersonName"
                android:maxLines="1"
                android:padding="12dp" />
        </com.google.android.material.textfield.TextInputLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="60dp">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/act_f_s_foodweight"
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="24dp"
                android:focusable="true"
                tools:ignore="MissingConstraints">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/act_f_s_foodweightname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/primaryTextColor"
                    android:fontFamily="@font/montserrat"
                    android:hint="@string/food_weight"
                    android:inputType="numberDecimal"
                    android:maxLines="1"
                    android:padding="12dp" />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/act_f_s_foodprice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="3dp"
                android:layout_marginEnd="24dp"
                android:focusable="true"
                android:layout_toEndOf="@+id/act_f_s_foodweight"
                tools:ignore="MissingConstraints">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/act_f_s_foodpricename"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/primaryTextColor"
                    android:fontFamily="@font/montserrat"
                    android:hint="@string/food_price"
                    android:inputType="number"
                    android:maxLines="1"
                    android:padding="12dp" />
            </com.google.android.material.textfield.TextInputLayout>

        </RelativeLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/act_f_s_totalfood"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="24dp"
            android:focusable="true"
            tools:ignore="MissingConstraints">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/act_f_s_total_foodname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/primaryTextColor"
                android:fontFamily="@font/montserrat"
                android:hint="@string/num_of_food_order"
                android:inputType="number"
                android:maxLines="1"
                android:padding="12dp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/act_f_s_foodallinfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="24dp"
            android:focusable="true"
            tools:ignore="MissingConstraints">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/act_f_s_foodallinfoname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/primaryTextColor"
                android:fontFamily="@font/montserrat"
                android:hint="@string/finfo"
                android:inputType="textPostalAddress"
                android:maxLines="1"
                android:padding="12dp" />
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:id="@+id/act_f_s_timedateb"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="10dp"
                android:background="@drawable/shape_aed_red"
                android:orientation="horizontal"
                android:padding="10dp">

                <Button
                    android:id="@+id/act_f_s_fooddatename"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:fontFamily="@font/montserrat"
                    android:paddingStart="20dp"
                    android:text="@string/fdate"
                    android:focusable="true"
                    android:textColor="@color/whiteCardColor"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_gravity="center"
                    android:layout_marginLeft="10dp"
                    android:padding="3dp"
                    android:src="@drawable/calendar" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="10dp"
                android:background="@drawable/shape_aed_red"
                android:orientation="horizontal"
                android:padding="10dp">

                <Button
                    android:id="@+id/act_f_s_foodtimename"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@+id/act_f_s_fooddatename"
                    android:background="@null"
                    android:fontFamily="@font/montserrat"
                    android:paddingStart="20dp"
                    android:layout_marginEnd="5dp"
                    android:text="@string/food_time"
                    android:focusable="true"
                    android:textColor="@color/whiteCardColor"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_gravity="center"
                    android:padding="4dp"
                    android:src="@drawable/timeclock" />
            </LinearLayout>
        </LinearLayout>



        <LinearLayout
            android:id="@+id/act_f_s_layout"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/shape_aed_red"
            android:orientation="horizontal"
            android:padding="5dp"
            tools:ignore="UseSwitchCompatOrMaterialXml">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:fontFamily="@font/montserrat"
                android:padding="7dp"
                android:text="Add Image"
                android:focusable="true"
                android:textColor="@color/whiteCardColor"
                android:textSize="16sp" />

            <ImageView
                android:id="@+id/act_f_s__photobutton"
                android:layout_width="25dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:layout_marginRight="20dp"
                app:srcCompat="@drawable/imageadd" />


        </LinearLayout>


        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/act_f_s__foodphoto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            app:srcCompat="@drawable/apple1"
            android:layout_marginTop="30dp"
            app:shapeAppearanceOverlay="@style/RoundedSquare"
            app:strokeColor="#047BD5"
            app:strokeWidth="2dp"/>

        <Button
            android:id="@+id/act_f_s_submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="80dp"
            android:layout_marginTop="28dp"
            android:layout_marginEnd="80dp"
            android:layout_marginBottom="30dp"
            android:background="@drawable/shape_aed_red"
            android:fontFamily="@font/montserrat"
            android:text="@string/submit"
            android:focusable="true"
            android:textColor="@android:color/white"
            android:textSize="17sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/act_f_s_foodtimename" />


    </LinearLayout>

</ScrollView>