<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/loginBkColor"
    android:orientation="vertical"
    tools:context=".activitys.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

<!--        <LinearLayout-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:orientation="horizontal">-->

<!--            <androidx.cardview.widget.CardView-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="50dp"-->
<!--                android:clickable="true"-->
<!--                android:clipChildren="false"-->
<!--                android:clipToPadding="false"-->
<!--                android:elevation="15dp"-->
<!--                android:focusable="true"-->
<!--                android:foreground="?attr/selectableItemBackground"-->
<!--                android:outlineAmbientShadowColor="#2196F3"-->
<!--                android:outlineSpotShadowColor="#2196F3"-->
<!--                android:translationZ="1dp"-->
<!--                app:cardBackgroundColor="@color/colorPrimary"-->
<!--                app:cardElevation="15dp"-->
<!--                app:cardPreventCornerOverlap="false">-->

<!--                <TextView-->
<!--                    android:layout_width="wrap_content"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:layout_gravity="center"-->
<!--                    android:text="HOME"-->
<!--                    android:textColor="@color/whiteCardColor"-->
<!--                    android:textSize="15sp"-->
<!--                    android:textStyle="bold" />-->

<!--                <ImageView-->
<!--                    android:id="@+id/logout"-->
<!--                    android:layout_width="50dp"-->
<!--                    android:layout_height="40dp"-->
<!--                    android:layout_gravity="end|center"-->
<!--                    android:layout_marginRight="10dp"-->
<!--                    android:padding="8dp"-->
<!--                    android:src="@drawable/log" />-->
<!--            </androidx.cardview.widget.CardView>-->
<!--        </LinearLayout>-->

        <androidx.cardview.widget.CardView
            android:id="@+id/mainprofile"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_margin="20dp"
            android:clickable="true"
            android:clipChildren="false"
            android:clipToPadding="false"
            android:elevation="15dp"
            android:focusable="true"
            android:foreground="?attr/selectableItemBackground"
            android:outlineAmbientShadowColor="#673AB7"
            android:outlineSpotShadowColor="#673AB7"
            android:translationZ="1dp"
            android:background="@drawable/background_main_1"
            app:cardBackgroundColor="#00AEE9"
            app:cardCornerRadius="16dp"
            app:cardElevation="15dp"
            app:cardPreventCornerOverlap="false"
            >

            <ImageView
                android:layout_width="120dp"
                android:layout_height="match_parent"
                android:layout_marginStart="20dp"
                android:contentDescription="@string/dsec"
                android:src="@drawable/user" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_gravity="end"
                android:fontFamily="@font/montserrat_bold"
                android:padding="20dp"
                android:text="@string/profile"
                android:textColor="@android:color/white"
                android:textSize="30sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end|bottom"
                android:background="#00000000"
                android:fontFamily="@font/montserrat"
                android:textStyle="bold"
                android:padding="15dp"
                android:text="@string/expand"
                android:textAllCaps="true"
                android:textColor="@android:color/white"
                android:textSize="15sp" />


        </androidx.cardview.widget.CardView>


        <androidx.cardview.widget.CardView
            android:id="@+id/mainseller"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_margin="20dp"
            android:clickable="true"
            android:clipChildren="false"
            android:clipToPadding="false"
            android:elevation="30dp"
            android:focusable="true"
            android:foreground="?attr/selectableItemBackground"
            android:outlineAmbientShadowColor="#673AB7"
            android:outlineSpotShadowColor="#673AB7"
            android:translationZ="2dp"
            app:cardCornerRadius="16dp"
            app:cardElevation="16dp"
            app:cardPreventCornerOverlap="false"
            app:cardBackgroundColor="#00D7DF"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_bold"
                android:padding="25dp"
                android:text="Seller"
                android:textSize="35sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_gravity="bottom"
                android:fontFamily="@font/montserrat"
                android:textStyle="bold"
                android:padding="13dp"
                android:text="@string/expand"
                android:textAllCaps="true"
                android:textSize="15sp" />

            <ImageView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_alignParentEnd="true"
                android:layout_gravity="end"
                android:layout_marginTop="-10dp"
                android:layout_marginEnd="-20dp"
                android:contentDescription="@string/dsec"
                android:padding="30dp"
                android:src="@drawable/seller" />
        </androidx.cardview.widget.CardView>


        <androidx.cardview.widget.CardView
            android:id="@+id/mainbuyer"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_margin="20dp"
            android:clickable="true"
            android:clipChildren="false"
            android:clipToPadding="false"
            android:elevation="15dp"
            android:focusable="true"
            android:foreground="?attr/selectableItemBackground"
            android:outlineAmbientShadowColor="#673AB7"
            android:outlineSpotShadowColor="#3F51B5"
            android:translationZ="1dp"
            app:cardBackgroundColor="#FFEAA7"
            app:cardCornerRadius="16dp"
            app:cardElevation="8dp"
            app:cardPreventCornerOverlap="false">

            <ImageView
                android:layout_width="120dp"
                android:layout_height="match_parent"
                android:layout_marginStart="20dp"
                android:contentDescription="@string/dsec"
                android:padding="10dp"
                android:src="@drawable/market" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_gravity="end"
                android:fontFamily="@font/montserrat_bold"
                android:padding="15dp"
                android:text="@string/buyer"
                android:textColor="@android:color/black"
                android:textSize="30sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_gravity="end|bottom"
                android:background="#00000000"
                android:fontFamily="@font/montserrat"
                android:padding="15dp"
                android:text="@string/expand"
                android:textAllCaps="true"
                android:textColor="@android:color/black"
                android:textSize="15sp"
                android:textStyle="bold" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/maindelivery"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_margin="20dp"
            android:clickable="true"
            android:clipChildren="false"
            android:clipToPadding="false"
            android:elevation="15dp"
            android:focusable="true"
            android:foreground="?attr/selectableItemBackground"
            android:outlineAmbientShadowColor="#673AB7"
            android:outlineSpotShadowColor="#3F51B5"
            android:translationZ="1dp"
            app:cardBackgroundColor="#FDD08D"
            app:cardCornerRadius="16dp"
            app:cardElevation="8dp"
            app:cardPreventCornerOverlap="false">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_bold"
                android:padding="15dp"
                android:text="@string/delivery"
                android:textSize="35sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_gravity="bottom"
                android:fontFamily="@font/montserrat"
                android:textStyle="bold"
                android:padding="10dp"
                android:text="@string/expand"
                android:textAllCaps="true"
                android:textSize="15sp" />

            <ImageView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_alignParentEnd="true"
                android:layout_gravity="end"
                android:contentDescription="@string/dsec"
                android:padding="20dp"
                android:src="@drawable/delivery_box" />

        </androidx.cardview.widget.CardView>

    </LinearLayout>

</ScrollView>